src/objects/brBlog_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Blog Settings</label>
</CustomObject>